--- a/README
+++ b/README
@@ -13,3 +13,15 @@ $ npm run start:jobsapi
 # scrapper mode
 $ npm run start:scrapper
 ```
+
+## URLS
+
+After running available URLS are:
+
+API: http://localhost:3000/jobs
+/jobs/search/searchByLocation
+/jobs/search/searchByTechnology
+
+API Documentation: http://localhost:3000/api
+
+AWS DynamoDB is Already populated with data but if needed just run the start scripts to scrape more data ;)
